[package]
name = "rmd"
version = "0.1.0"
authors = ["Filippo Ranza <filipporanza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.9"
data-encoding = "2.1.2"
tempfile = "3.1.0"
walkdir = "2.2.9"