[package]
name = "rmd"
version = "0.5.1"
authors = ["Filippo Ranza <filipporanza@gmail.com>"]
edition = "2018"
license = "MIT"
description = "An improved rm implementation able to remove duplicate files"
repository = "https://github.com/FilippoRanza/rmd"
readme = "README.md"
keywords = ["remove", "fileutils", "duplicates", "rm", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.9"
data-encoding = "2.1.2"
clap = "2.33.0"
syslog = "5.0"
log = "0.4"

[dev-dependencies]
tempfile = "3.1.0"